--- a/src/main/resources/freemarker/security/register.html
+++ b/src/main/resources/freemarker/security/register.html
@@ -1,5 +1,8 @@
 [#ftl]
 <div class="security-container" data-ng-cloak >
+    <script >
+		var signed = false;
+	</script>
     [#--
     # Logo
     #--]
