--- a/src/main/resources/freemarker/security/signup.html
+++ b/src/main/resources/freemarker/security/signup.html
@@ -1,5 +1,8 @@
 [#ftl]
 <div class="container">
+    <script >
+		var signed = false;
+	</script>
     <div class="security-container" data-ng-cloak >
         [#include "../config/login-splash.html" /]
         <h3 class="text-center">{{'_SIGNUP_FREE_TITLE'| common}}</h3>
