material design layout

--- a/src/main/resources/freemarker/_js.html
+++ b/src/main/resources/freemarker/_js.html
@@ -20,14 +20,14 @@
 <script type="text/javascript" src="/webjars/ace/1.1.7-1/src-min-noconflict/ace.js"></script>
 <script type="text/javascript" src="/webjars/angular-ui-ace/0.2.3/ui-ace.js"></script>
 <!-- service module-->
-<script type="text/javascript" src="/assets/services.js"></script>
-<script type="text/javascript" src="/assets/services-ext.js"></script>
-<script type="text/javascript" src="/assets/iservport-layout-std.js"></script>
+<script type="text/javascript" src="/assets/helianto-security.js"></script>
 <!-- i18n -->
 <script type="text/javascript" src="/assets/_i18n/i18n_${locale!'pt_br'}.js"></script>
 <script type="text/javascript" src="/assets/${baseName!'static'}/i18n/${baseName!'static'}_${locale!'pt_br'}.js"></script>
 <!-- modules-->
 <script type="text/javascript" src="/assets/${baseName!'static'}/ng-${baseName!'static'}-module.js"></script>
+
+<script src="/webjars/material-design-lite/1.1.3/material.min.js"></script>
 
 
 <!-- plugins-->
