--- a/src/main/resources/freemarker/_top.html
+++ b/src/main/resources/freemarker/_top.html
@@ -1,63 +1,21 @@
-[#ftl]
-<header class="top-header clearfix" >
-    <!-- Logo -->
-    <div class="logo bg-dark-light" >
-        <a href="#/">
-            <img width="48px;" src="/static/images/logo.png">
-            <span class="ng-binding">iservport</span>
-        </a>
+<div class="mdl-layout__header-row">
+    <span class="mdl-layout-title">Home</span>
+    <div class="mdl-layout-spacer"></div>
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+        <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
+            <i class="material-icons">search</i>
+        </label>
+        <div class="mdl-textfield__expandable-holder">
+            <input class="mdl-textfield__input" type="text" id="search">
+            <label class="mdl-textfield__label" for="search">Enter your query...</label>
+        </div>
     </div>
-    <!-- needs to be put after logo to make it work -->
-    <div class="menu-button" data-toggle-off-canvas >
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-    </div>
-    <div class="top-nav" >
-        <ul class="nav-left list-unstyled hidden-xs">
-            <li>
-                <a href="#/" data-toggle-nav-collapsed-min
-                   class="toggle-min"
-                ><i class="fa fa-bars"></i></a>
-            </li>
-            <li><a href="/root"><i data-href="/api/entity" data-authorized-entity></i></a></li>
-        </ul>
-        <ul class="nav-right pull-right list-unstyled">
-            <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" >
-                    <img class="img-circle img30_30 hidden-xs"
-                         data-ng-src="{{authorizedUser.userImageUrl}}"
-                         data-err-src="/static/images/user/gender64-{{authorizedUser.userGender}}.png">
-                    <span>{{authorizedUser.displayName}}&nbsp;<i class="fa fa-caret-down"></i></span>
-                </a>
-                <ul class="dropdown-menu with-arrow pull-right">
-                    <li>
-                        <a data-ng-click="getProfile(authorizedUser.identityId)">
-                            <i class="glyphicon glyphicon-user"></i>
-                            <span>{{'PERSONAL_DATA' | common}}</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/logout">
-                            <i class="glyphicon glyphicon-log-out"></i>
-                            <span>{{'_EXIT' | common}}</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        [#if categories?seq_contains('Q')]
-        <ul class="nav-right pull-right list-unstyled hidden-xs" >
-            <li>
-                <a data-ng-click="openRequestList()" >
-                    <i class="glyphicon glyphicon-bell small"></i>
-                    <span class="badge" data-ng-if="countAlert>0 || countWarning>0"
-                      data-ng-class="{'badge-danger' : countAlert>0, 'badge-warning':(countAlert==0 && countWarning>0 )}">
-                      {{countAlert>0?countAlert:countWarning}}
-                    </span>
-                </a>
-            </li>
-        </ul>
-        [/#if]
-    </div><!-- top-nav -->
-</header>
+    <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
+        <i class="material-icons">more_vert</i>
+    </button>
+    <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
+        <li class="mdl-menu__item">About</li>
+        <li class="mdl-menu__item">Contact</li>
+        <li class="mdl-menu__item">Legal information</li>
+    </ul>
+</div>
